# iolanta-wikimedia

./: pyproject.toml
iolanta_wikimedia/: __init__.py  plugin.py
